# CsWinRT

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  README.md  STRUCTURE.md  SignConfig.xml  Strings.props  USAGE.md  ValidateCsWinRT-WinUI.yml  benchmark.cmd  benchmark_winmd.cmd  breakingchanges.md  build.cmd  build_test_all.cmd  comp.rsp  cross-mingw-toolchain.cmake  cswinrt.sln  cswinrt.sln.metaproj  get_buildtools.ps1  get_testwinrt.cmd  get_xcopy_msbuild.ps1  global.json  nuget.config
.config/: tsaoptions.json
.gdn/: .gdnsuppress
.github/: copilot-instructions.md
Authoring/: Directory.Build.props
Benchmarks/: Benchmarks.csproj  Benchmarks.manifest  Program.cs  QueryInterface.cs  ReflectionPerf.cs
CppWinRTProjectionSample/: .gitignore  CppWinRTComponentProjectionSample.sln  README.md
DesktopWinUICSharpLeakTest/: DesktopWinUICSharpLeakTest.csproj  FirstPage.xaml  FirstPage.xaml.cs  FirstPage.xaml.cs~repro leak to test fix  Net5_WinUI_Fixup.Targets  SecondPage.xaml  SecondPage.xaml.cs  app.manifest
DesktopWinUICSharpLeakTest (Package)/: DesktopWinUICSharpLeakTest (Package)_TemporaryKey.pfx  Package.appxmanifest
HostTest/: BadMappedTarget.Host.runtimeconfig.json  BadMappedTarget.manifest  BadRuntimeConfig.Host.runtimeconfig.json  BadRuntimeConfig.manifest  ClassNotFound.Host.runtimeconfig.json  ClassNotFound.manifest  Directory.Build.targets  DoNotImport_MsAppxPackageTargets.targets  HostTest.cpp  HostTest.vcxproj  TestHost.idl  (+15 more)
src/cswinrt/prebuild/: CMakeLists.txt  main.cpp  prebuild.vcxproj
(+2897 files in other folders)
